# DataCon-2025

./: .gitignore
hakaton/models/: rf_ache.joblib
hakaton/notebooks/: exploration.ipynb  modeling.ipynb  pipeline.ipynb  preprocessing.ipynb
hakaton/raw_data/: DOWNLOAD-FDmGSziw8m4BqfX7gRwtbIWwAQXsWL52jYSyYTD4XMc_eq_.csv  beta-secretase 1 interactions.csv  pubchem_geneid_23621_bioactivity_gene.csv
hakaton/src/: analyze_docking.py  data_loader.py  descriptors.py  docking.py  ensemble_predict.py  generate_molecules.py  optimize_models.py  prepare_multitask.py  reward_function.py  select_hits.py  train_models.py
preparing_data/: bace_desc_fps.ipynb  bace_df_loading.ipynb  gsk_3_b_load_and_desc_fps.ipynb
task_1/: Mini-Task_1_Import_Data.ipynb  README.md  cox2_clean.csv  cox2_clean_data.csv  cox2_preprocessing.ipynb  cox2_raw_data.csv  pyproject.toml
task_2/: README.md  cleaned_mordred_data.csv  cleaned_rdkit_data.csv  cox2_clean_data.csv  df_cleaned_mordred_maccs.csv  df_cleaned_mordred_morgan.csv  df_cleaned_rdkit_maccs.csv  df_cleaned_rdkit_morgan.csv  mini_task_2.ipynb  mordred_desc_dirty.csv  rdkit_desc_dirty.csv
task_2/.ipynb_checkpoints/: cleaned_mordred_data-checkpoint.csv  mini_task_2-checkpoint.ipynb
task_3/: pyproject.toml  task_3.ipynb
task_3/.ipynb_checkpoints/: mini_task_3-checkpoint.ipynb  task3_with_cnn-checkpoint.ipynb  task_3-checkpoint.ipynb
task_4/: config.json  fine_tune_set.smi  task_4.ipynb
