[tool.poetry]
name = "task-1"
version = "0.1.0"
description = ""
authors = ["I-AM-LAMER <vadimtatarnikov300605@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rdkit = "^2025.3.3"
notebook = "^7.4.4"
ipykernel = "^6.29.5"
pandas = "^2.3.1"
chembl-webresource-client = "^0.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
